# h24s_16

./: Dockerfile  README.md
backend/: .gitignore  Dockerfile.backend  Dockerfile.bot  alembic.ini  docker-entrypoint.backend.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04334650d23a_.py  1d9bf82abb1c_init_tables.py  845a4e8dbfa2_init_tables.py  a18e02e157e5_.py
backend/src/backend/: main.py
backend/src/backend/repository/: crud.py  database.py  schemas.py
backend/src/bot/: main.py  stamps.py  util.py
backend/src/tasq/: bot.py  main.py
backend/src/tasq/repository/: crud.py  database.py  models.py  schemas.py
backend/src/traqapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
backend/src/traqapi/api/: __init__.py  activity_api.py  authentication_api.py  bot_api.py  channel_api.py  clip_api.py  file_api.py  group_api.py  me_api.py  message_api.py  notification_api.py  oauth2_api.py  ogp_api.py  pin_api.py  public_api.py  stamp_api.py  star_api.py  user_api.py  user_tag_api.py  webhook_api.py  webrtc_api.py
backend/src/traqapi/models/: __init__.py  active_o_auth2_token.py  activity_timeline_message.py  bot.py  bot_detail.py  bot_event_log.py  bot_event_result.py  bot_mode.py  bot_state.py  bot_tokens.py  bot_user.py  channel.py  channel_event.py  channel_event_detail.py  channel_list.py  channel_stats.py  channel_stats_stamp.py  channel_stats_user.py  channel_subscribe_level.py  channel_topic.py  channel_view_state.py  channel_viewer.py  child_created_event.py  clip_folder.py  clipped_message.py  file_info.py  (+99 more)
(+19 files in other folders)
