[project]
name = "tasq-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "trasta", email = "trasta298@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.30",
    "aiotraq>=0.1.2",
    "aiotraq-bot>=0.1.2",
    "aiotraq-message>=0.2.0",
    "urllib3 >= 1.25.3, < 2.1.0",
    "python-dateutil",
    "pydantic >= 1.10.5, < 2",
    "aenum"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
